# NVWorldEdit

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
source/: GameData.cpp  GameData.cxx  GameData.hpp  GameData.hxx  GameMasterData.cpp  GameMasterData.cxx  GameMasterData.h  GameMasterData.hpp  GameMasterData.hxx  Win32Macros.hpp  main.cpp  main.cxx  main.h  main.hpp  main.hxx
source/sys/: Sys.hpp
